fix(theme): add tw custom CSS class-based dark mode variant (#226)

--- a/src/LumexUI/Styles/_theme.css
+++ b/src/LumexUI/Styles/_theme.css
@@ -1,4 +1,6 @@
-﻿@layer base {
+﻿@custom-variant dark (&:where(.dark, .dark *));
+
+@layer base {
     body {
         @apply text-foreground bg-background;
     }
